--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "@koa/cors": "^3.1.0",
     "koa": "^2.13.0",
     "koa-body": "^4.2.0",
+    "koa-combine-routers": "^4.0.2",
+    "koa-helmet": "^6.0.0",
     "koa-json": "^2.0.2",
-    "koa-router": "^9.4.0"
+    "koa-router": "^9.4.0",
+    "koa-static": "^5.0.0"
   }
 }
