--- a/package.json
+++ b/package.json
@@ -4,7 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --exec babel-node src/index.js"
+    "start": "nodemon --exec babel-node src/index.js",
+    "webpack:debug": "node --inspect-brk ./node_modules/.bin/webpack --inline --progress",
+    "build": "cross-env NODE_ENV=production webpack --config config/webpack.config.prod.js",
+    "build:dev": "cross-env NODE_ENV=development webpack --config config/webpack.config.prod.js",
+    "dev": "cross-env NODE_ENV=development nodemon --exec babel-node --inspect ./src/index.js",
+    "clean": "rimraf dist",
+    "lint": "eslint src/ --ext .js --fix",
+    "watch": "cross-env NODE_ENV=development webpack --watch --progress --hide-modules --config config/webpack.config.dev.js",
+    "debug": "nodemon --inspect=9229 ./dist/server.bundle.js"
   },
   "repository": {
     "type": "git",
@@ -21,6 +29,7 @@
     "koa": "^2.13.0",
     "koa-body": "^4.2.0",
     "koa-combine-routers": "^4.0.2",
+    "koa-compress": "^5.0.1",
     "koa-helmet": "^6.0.0",
     "koa-json": "^2.0.2",
     "koa-router": "^9.4.0",
@@ -34,8 +43,11 @@
     "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^7.0.2",
     "nodemon": "^2.0.6",
+    "rimraf": "^3.0.2",
+    "terser-webpack-plugin": "^4.1.0",
     "webpack": "^4.38.0",
     "webpack-cli": "^3.3.6",
+    "webpack-merge": "^5.3.0",
     "webpack-node-externals": "^2.5.2"
   }
 }
